--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:min": "vite build --minify",
     "preview": "vite preview"
   },
   "dependencies": {
-    "hash-wasm": "^4.9.0",
-    "view-ui-plus": "^1.3.1",
-    "vue": "^3.2.41"
+    "hash-wasm": "^4.11.0",
+    "view-ui-plus": "^1.3.14",
+    "vue": "^3.2.47"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.2.0",
-    "vite": "^3.2.3"
+    "@vitejs/plugin-vue": "^4.5.1",
+    "vite": "^4.5.0"
   }
 }
